--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "lodash": "^4.2.0",
-    "mkdirp": "^0.5.1",
-    "morgan": "~1.5.1",
-    "purl": "^1.0.4",
-    "serve-favicon": "~2.2.0"
+    "body-parser": "1.10.2",
+    "cookie-parser": "1.3.3",
+    "debug": "2.1.1",
+    "express": "4.11.1",
+    "jade": "1.9.1",
+    "lodash": "4.2.0",
+    "mkdirp": "0.5.1",
+    "morgan": "1.5.1",
+    "purl": "1.0.4",
+    "serve-favicon": "2.2.0"
   },
   "description": "`DEBUG=local-assets:* ./bin/www`",
   "main": "app.js",
