--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "1.10.2",
+    "cheerio": "0.20.0",
     "cookie-parser": "1.3.3",
     "debug": "2.1.1",
     "express": "4.11.1",
@@ -15,6 +16,7 @@
     "mkdirp": "0.5.1",
     "morgan": "1.5.1",
     "purl": "1.0.4",
+    "request": "2.69.0",
     "serve-favicon": "2.2.0"
   },
   "description": "`DEBUG=local-assets:* ./bin/www`",
